<!-- res/values/strings.xml -->
<resources>
    <string name="app_name">Регистрация</string>
    <string name="full_name">ФИО</string>
    <string name="login">Логин</string>
    <string name="email">Email</string>
    <string name="phone">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повтор пароля</string>
    <string name="birth_date">Дата рождения</string>
    <string name="product">Продукт</string>
    <string name="agree">Согласие на обработку персональных данных</string>
    <string name="register">Зарегистрироваться</string>
</resources>